image-rendering: crisp-edges n'étant pas supporté sur la version Edge 79+ j'ai ajouté -webkit-optimize-contrast pour fix le bug

--- a/src/App.css
+++ b/src/App.css
@@ -5,7 +5,7 @@
     margin: 0 !important;
     color: white;
     font-family: 'Tilt Neon', sans-serif;
-    image-rendering: crisp-edges;
+    image-rendering: -webkit-optimize-contrast;
 }
 
 .App {
